Add defaultValue() to UnboundFlag